--- a/AppVentas/app/src/main/res/layout/activity_categoria.xml
+++ b/AppVentas/app/src/main/res/layout/activity_categoria.xml
@@ -14,6 +14,7 @@
         android:id="@+id/recyclerViewCategorias"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="16dp"
         android:scrollbars="vertical" />
 
 
