--- a/AppVentas/app/src/main/res/layout/item_categoria.xml
+++ b/AppVentas/app/src/main/res/layout/item_categoria.xml
@@ -3,25 +3,28 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="8dp"
-    android:background="?android:attr/selectableItemBackground"
-    android:layout_marginBottom="2dp"> <!-- Reducción de margen inferior -->
+    android:padding="16dp"
+    android:gravity="center"
+    android:background="#FFFFFF">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center"
         android:scaleType="centerCrop"/>
 
 
-    <TextView
-        android:id="@+id/nombreTextView"
+    <Button
+        android:id="@+id/nombreButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:textSize="16sp"
-        android:textColor="#000"
-        android:textStyle="bold"
-        android:text="Nombre de la Categoría" />
+        android:layout_marginTop="8dp"
+        android:padding="8dp"
+        android:text="Nombre de la Categoría"
+        android:textColor="#FFFFFF"
+        android:backgroundTint="#4B0082"
+        android:layout_gravity="center"
+        android:textAllCaps="false" />
 
 </LinearLayout>
